--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Goldman&family=IBM+Plex+Mono&family=Kanit&display=swap");
-
 // Reset CSS
 * {
   padding: 0;
@@ -8,7 +6,7 @@
 
 html,
 body {
-  font-family: Inter;
+  font-family: "Inter", sans-serif;
   font-size: 18px;
 }
 
