--- a/src/App.scss
+++ b/src/App.scss
@@ -44,16 +44,97 @@ a {
   cursor: pointer;
 }
 
+@keyframes move1 {
+  100% {
+    transform: translateY(30px);
+  }
+}
+
+@keyframes move2 {
+  100% {
+    transform: translateX(20px);
+  }
+}
+
+@keyframes move3 {
+  100% {
+    transform: translateX(-30px);
+  }
+}
+
+@keyframes move4 {
+  100% {
+    transform: translateY(-30px);
+  }
+}
+
+@keyframes scale1 {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.2);
+  }
+  25% {
+    transform: scale(1.3);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  75% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes scale2 {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.2);
+  }
+  25% {
+    transform: scale(1.4);
+  }
+  50% {
+    transform: scale(1.4);
+  }
+  75% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotateY(150deg);
+  }
+}
+
+// .rotate {
+//   animation: rotate 2s linear 5 alternate;
+// }
+
 // Style
 .App {
   background: #000;
+  overflow: hidden;
   .container {
     width: 80%;
     padding: 0 24px;
     margin: 0 auto;
+    position: relative;
+    z-index: 10;
   }
   .page-header {
     padding-top: 26px;
+    position: relative;
+    z-index: 999;
     .container {
       display: flex;
       align-items: center;
@@ -81,21 +162,53 @@ a {
   }
   .page-main {
     .section-intro {
+      position: relative;
+      transition: all 0.5s linear;
+      &:hover {
+        .intro-p {
+          &-1 {
+            transform: translateX(15px);
+          }
+          &-2 {
+            transform: translateY(15px);
+          }
+          // &-3 {
+          //   transform: translateY(-15px);
+          // }
+          &-4 {
+            transform: translateX(-15px);
+          }
+
+          // &-8 {
+          //   transform: translateX(-15px);
+          // }
+          &-9 {
+            transform: translateX(15px);
+          }
+          &-10 {
+            transform: translateY(15px);
+          }
+        }
+      }
       .container {
-        background-image: url("./assets/images/img-circle.svg");
-        background-position: top right;
-        background-repeat: no-repeat;
+        position: relative;
+        z-index: 9999;
         display: flex;
-        justify-content: space-between;
-        gap: 58px;
+        // justify-content: space-between;
+        gap: 150px;
         padding-top: 115px;
         .left-content {
+          position: relative;
+          z-index: 999;
           max-width: 800px;
           .title {
-            color: #fff;
+            // color: #fff;
             font-size: 70px;
             font-weight: 800;
             padding-bottom: 25px;
+            background: -webkit-linear-gradient(#f5d1ff, #fff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
           }
           .content {
             color: rgba(255, 255, 255, 0.8);
@@ -105,9 +218,103 @@ a {
           }
         }
         .right-content {
+          position: relative;
+          z-index: 999;
           img {
             width: 289px;
+            position: relative;
+            z-index: 999;
           }
+        }
+      }
+      .intro-p {
+        position: absolute;
+        transition: all 0.5s linear;
+        &-main {
+          right: 5%;
+          z-index: 99;
+        }
+        &-b {
+          &-1 {
+            top: 0;
+          }
+          &-2 {
+            top: 0;
+            left: 40%;
+            z-index: 10;
+            animation: scale1 5s linear infinite;
+          }
+          &-3 {
+            top: -50%;
+            left: 30%;
+            z-index: 10;
+          }
+          &-4 {
+            top: -10%;
+            right: 0;
+            // z-index: 1;
+            &-3 {
+              right: -5%;
+              animation: scale2 4s linear infinite;
+            }
+          }
+          &-5 {
+            top: -50%;
+            left: 50%;
+            z-index: 10;
+          }
+        }
+        &-1 {
+          bottom: 12%;
+          left: 10%;
+          animation: move1 1s ease-in 1 alternate-reverse;
+        }
+        &-2 {
+          bottom: 25%;
+          left: 23%;
+          animation: move2 1s ease-in 1 alternate-reverse;
+        }
+        &-3 {
+          bottom: 27%;
+          left: 35%;
+          animation: move3 1s ease-in 1 alternate-reverse;
+        }
+        &-4 {
+          bottom: 55%;
+          left: 33%;
+          animation: move2 1s ease-in 1 alternate-reverse;
+        }
+        &-5 {
+          top: -10%;
+          right: 3%;
+          animation: move4 1s ease-in 1 alternate-reverse;
+        }
+        &-6 {
+          top: 10%;
+          right: 13%;
+          animation: move4 1s ease-in 1 alternate-reverse;
+        }
+        &-7 {
+          top: 50%;
+          right: 20%;
+          z-index: 999;
+          animation: move1 1s ease-in 1 alternate-reverse;
+        }
+        &-8 {
+          top: 45%;
+          right: 10%;
+          animation: move2 1s ease-in 1 alternate-reverse;
+        }
+        &-9 {
+          top: 68%;
+          right: 10%;
+          z-index: 999;
+          animation: move3 1s ease-in 1 alternate-reverse;
+        }
+        &-10 {
+          top: 85%;
+          right: 13%;
+          animation: move1 1s ease-in 1 alternate-reverse;
         }
       }
     }
@@ -157,7 +364,7 @@ a {
               gap: 17px;
             }
             .btn-left {
-              border-radius: 10.02px;
+              border-radius: 10px;
               background: #fff;
               box-shadow: 0px 5px 11px 0px rgba(0, 3, 66, 0.07),
                 0px 2px 4px 0px rgba(0, 0, 0, 0.04),
@@ -168,6 +375,10 @@ a {
               font-weight: 600;
               line-height: 27.449px;
               letter-spacing: -0.355px;
+              transition: all 0.3s linear;
+              &:hover {
+                opacity: 0.8;
+              }
             }
             .btn-right {
               color: rgba(255, 255, 255, 0.5);
@@ -176,6 +387,13 @@ a {
               font-weight: 600;
               line-height: 27.449px;
               letter-spacing: -0.355px;
+              transition: all 0.3s linear;
+              border-radius: 10px;
+
+              &:hover {
+                background-color: #fff;
+                color: #000;
+              }
             }
           }
         }
@@ -203,6 +421,7 @@ a {
       }
     }
     .section-ecosystem {
+      position: relative;
       .container {
         padding-top: 173px;
         .section-title {
@@ -241,17 +460,21 @@ a {
         }
         .content-bottom {
           display: flex;
+          justify-content: space-between;
+          align-items: center;
           gap: 235px;
           padding-top: 87px;
-          img {
-            width: 435px;
+          &-left {
+            margin-top: 200px;
+            width: 300px;
+            flex-shrink: 0;
           }
           .core-boxes {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 64px 134px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 64px;
+
             .box {
-              width: 272px;
               .box-img {
                 width: 92px;
                 img {
@@ -302,6 +525,47 @@ a {
             align-items: center;
             gap: 15px;
             padding: 24px 64px;
+            transition: all 0.3s linear;
+            &:hover {
+              opacity: 0.8;
+            }
+          }
+        }
+      }
+      .ecosystem-p {
+        position: absolute;
+        &-main {
+          left: -10%;
+          top: 20%;
+        }
+        &-1 {
+          top: 35%;
+          left: 15%;
+        }
+        &-2 {
+          top: 55%;
+          left: 30%;
+        }
+        &-b {
+          &-1 {
+            top: 10%;
+          }
+          &-2 {
+            top: 15%;
+            left: -30%;
+          }
+          &-3 {
+            top: 30%;
+            left: -5%;
+          }
+          &-4 {
+            top: 54%;
+            left: 7.5%;
+            animation: scale1 5s linear infinite alternate-reverse;
+          }
+          &-5 {
+            bottom: -50%;
+            left: -10%;
           }
         }
       }
@@ -331,13 +595,13 @@ a {
           }
         }
         .section-bottom {
+          padding-top: 24px;
           display: flex;
           gap: 40px;
-          padding-top: 24px;
           .content-left {
             width: 40%;
             h3 {
-              color: #fff;
+              margin-top: -150px;
               font-size: 50.512px;
               font-style: normal;
               font-weight: 800;
@@ -348,17 +612,26 @@ a {
             }
             .box-img {
               display: flex;
-              width: 185px;
+              align-items: center;
               margin: 0 -32px;
+              &-1 {
+                transition: all 0.5s linear;
+              }
+              &-2 {
+                margin-left: -80px;
+                margin-bottom: 50px;
+                position: relative;
+                transition: all 0.5s linear;
+              }
             }
           }
           .content-right {
+            width: 60%;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
             gap: 23px;
-            width: 60%;
             h3 {
-              color: #fff;
               font-size: 37.904px;
               font-style: normal;
               font-weight: 800;
@@ -366,14 +639,32 @@ a {
               letter-spacing: -1.417px;
               padding: 65px 0;
             }
-            .box-row {
-              display: flex;
-              align-items: center;
-              gap: 31px;
-              .box-farm,
-              .box-sniper {
-                width: 50%;
+            .box-exchange {
+              position: relative;
+              &-img,
+              &-img-hover {
+                width: 400px;
+                position: absolute;
+                top: 0;
+                right: 0;
               }
+              .box-exchange-img-not-hover {
+                opacity: 1;
+                transition: all 0.5s linear;
+              }
+              .box-exchange-img-hover {
+                opacity: 0;
+                transition: all 0.5s linear;
+                transform: translateX(200px);
+              }
+            }
+            .box-exchange.box-feature {
+              height: calc(50% - 96px);
+            }
+            .box-row {
+              display: grid;
+              grid-template-columns: repeat(2, 1fr);
+              gap: 31px;
             }
           }
         }
@@ -381,6 +672,7 @@ a {
     }
     .section-values {
       padding-top: 131px;
+      position: relative;
       .container {
         .section-title {
           color: rgba(255, 255, 255, 0.5);
@@ -465,6 +757,22 @@ a {
           }
         }
       }
+
+      .value-p {
+        position: absolute;
+        &-1 {
+          right: 35%;
+          z-index: 99;
+        }
+        &-2 {
+          top: -60%;
+          right: -35%;
+        }
+        &-3 {
+          top: 40%;
+          right: 10%;
+        }
+      }
     }
     .section-journey {
       position: relative;
@@ -503,11 +811,59 @@ a {
           justify-content: center;
           gap: 32px;
           .journey-item {
+            color: #fff;
             width: 341px;
             height: 398px;
             padding: 32px;
             border-radius: 20px;
             background: #171717;
+            transition: all 0.5s linear;
+            &-hover {
+              &-1,
+              &-2,
+              &-3 {
+                svg {
+                  transition: all 0.5s linear;
+                  path {
+                    transition: all 0.5s linear;
+                  }
+                }
+              }
+              &-2 {
+                display: inline-flex;
+                flex-direction: column;
+                align-items: center;
+                width: 25px;
+              }
+            }
+            &:hover {
+              background-color: #fff;
+              color: #000;
+              .title {
+                color: #000 !important;
+              }
+              .journey-item-hover-1,
+              .journey-item-hover-2,
+              .journey-item-hover-3 {
+                svg {
+                  path {
+                    stroke: #000;
+                  }
+                }
+              }
+              .journey-item-hover-1 svg {
+                transform: rotate(180deg);
+              }
+              .journey-item-hover-3 svg {
+                transform: rotateY(180deg);
+              }
+              .journey-item-hover-2 svg:first-child {
+                transform: translateX(20px);
+              }
+              .journey-item-hover-2 svg:last-child {
+                transform: rotate(30deg);
+              }
+            }
             .title {
               color: rgba(255, 255, 255, 0.5);
               font-size: 13px;
@@ -525,7 +881,6 @@ a {
             }
             .sub-title {
               padding-top: 63px;
-              color: #fff;
               font-size: 27.432px;
               font-style: normal;
               font-weight: 700;
@@ -538,7 +893,7 @@ a {
             }
             .content {
               padding-top: 16px;
-              color: #fff;
+              // color: #fff;
               font-size: 16px;
               font-style: normal;
               font-weight: 300;
@@ -613,8 +968,10 @@ a {
     }
     .section-enter-ecosystem {
       padding-top: 108px;
+      padding-bottom: 108px;
       background: url("./assets/images/img-bg-section-enter-eco.svg");
       background-repeat: no-repeat;
+      background-position: center;
       background-size: cover;
       .container {
         h3 {
@@ -855,11 +1212,38 @@ a {
   justify-content: center;
 }
 .box-feature {
+  overflow: hidden;
   border-radius: 20px;
   background: #171717;
   padding: 32px 32px 64px;
+  color: rgba(255, 255, 255, 0.5);
+  transition: all 0.5s linear;
+  &:hover {
+    background-color: #fff;
+    color: #000;
+    h3 {
+      color: #000;
+    }
+    .box-img-1 {
+      transform: translateY(-40px);
+    }
+    .box-img-2 {
+      transform: translateX(20px);
+    }
+    .box-exchange-img-not-hover {
+      opacity: 0 !important;
+      transform: translateX(200px);
+    }
+    .box-exchange-img-hover {
+      opacity: 1 !important;
+      transform: translateX(0) !important;
+    }
+  }
+  h3 {
+    color: #fff;
+    transition: all 0.5s linear;
+  }
   .box-title {
-    color: rgba(255, 255, 255, 0.5);
     font-size: 13px;
     font-style: normal;
     font-weight: 600;
@@ -868,7 +1252,6 @@ a {
     text-transform: uppercase;
   }
   .text-bottom {
-    color: rgba(255, 255, 255, 0.5);
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
